--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
 :root{
     --color-background: #F5F5F5;
     --color-text: #7A7A7A;
     --color-button: #1E1C1C;
+    --color-nav: #D9D9D9;
 }
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body{
